samples/_failures_safe/1761423610_a925f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f2c3252.c: In function ‘main’:
./samples/SAFE/__tmp_1f2c3252.c:158:5: error: ‘add’ undeclared (first use in this function)
  158 |     add
      |     ^~~
./samples/SAFE/__tmp_1f2c3252.c:158:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1f2c3252.c:158:8: error: expected ‘;’ at end of input
  158 |     add
      |        ^
      |        ;
./samples/SAFE/__tmp_1f2c3252.c:158:5: error: expected declaration or statement at end of input
  158 |     add
      |     ^~~
